2004-09-07  Andreas Schwab  <schwab@suse.de>

	* automake.in ($PATH_PATTERN): Add `+'.

2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/missing3.test: New file (check for Paolo's change below).
	* tests/Makefile.am (TESTS): Add missing3.test.

2004-09-07  Paolo Bonzini  <bonzini@gnu.org>

	* missing: Handle all command line options together.  Add a
	separate case statement to detect failed runs, and fail
	silently there if --help or --version is passed to the program.

2004-08-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess, lib/texinfo.tex: New upstream versions.

	For PR automake/433:
	* configure.ac (pkgvdatadir): Define using "$PACKAGE", not "automake".

	Fix PR automake/432:
	* lib/am/yacc.am [!%?MORE-THAN-ONE%]: Replace `#line's in y.tab.h too.
	* tests/yacc7.test: Check this.

2004-08-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/DisjConditions.pm (new): Precompute 'string' and 'conds'
	in place instead of as a side-effect of calling ->string and ->conds.
	This saves method-lookup time, simplify ->string and ->conds, and
	allows to create the object only when necessary.
	(string, conds): Simplify, now that the result is precomputed.

	* automake.in (%am_file_cache): New hash.
	(make_paragraphs): Cache .am files with comments stripped to save
	some useless input and substitutions.

	* lib/Automake/Variable.pm (%_primary_dict): New hash.
	(_new, variable_delete): Update %_primary_dict.
	(variables): Accept an optional $suffix argument.
	* automake.in (check_typos, am_primary_prefixes): Use that
	optional argument to restrict the loops over the variables we are
	interested in.

2004-08-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Item.pm (def): Rewrite more concisely, it's faster
	this way.

2004-08-05  Alexandre Duret-Lutz  <adl@gnu.org>

	Speed up make_paragraphs.
	* automake.in (handle_languages): Always define SUBDIROBJ,
	DERIVED-EXT, and DIST_SOURCE, because the new transform() will
	abort on unknown tokens.