@@ -1,3 +1,12 @@
+2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (lang_c_rewrite): Do not require AM_PROG_CC_C_O for
+	libtool objects.
+	(handle_single_transform): Pass nonansi_obj to &$subr so
+	lang_c_rewrite can distinguish libtool objects.
+	* tests/libtool7.test: Use subdir-objects without using AM_PROG_CC_C_O.
+	Report from Gary V. Vaughan and Patrick Welche.
+
 2004-09-07  Andreas Schwab  <schwab@suse.de>
 
 	* automake.in ($PATH_PATTERN): Add `+'.
@@ -69,7 +78,7 @@
 
 	Support AC_REQUIRE_AUX_FILE, and fix requirement of AM_PROG_CC_C_O.
 	* automake.in (%required_aux_file): New hash.
-	(handle_single_transform, lang_c_rewrite): Do note explicitly
+	(handle_single_transform, lang_c_rewrite): Do not explicitly
 	require 'compile', this is now an internal detail of
 	AM_PROG_CC_C_O.
 	(scan_autoconf_traces): Trace AC_REQUIRE_AUX_FILE and fill
@@ -82,7 +91,7 @@
 	* configure.ac, m4/init.m4: Require Autoconf 2.59a.
 	* doc/automake.texi (Optional): Document AC_REQUIRE_AUX_FILE.
 	(Program and Library Variables, Options, Public macros):
-	AC_PROG_CC_C_O is required when per-target flags or subdir-objects
+	AM_PROG_CC_C_O is required when per-target flags or subdir-objects
 	are used with C sources.
 	* m4/minuso.m4: Require `compile' using AC_REQUIRE_AUX_FILE.
 	* m4/missing.m4: Require `missing' similarly.
